# mtgdraft

./: .gitignore  pyproject.toml  setup.py
draft/: client.py  consumers.py  coordinator.py  draft.py  models.py  routing.py
mtgdraft/: client.py  models.py
