[project]
name = "mtgdraft"

[tool.isort]
profile = "black"
lines_after_imports = 2
honor_noqa = true

[tool.black]
line-length = 119

[tool.poetry]
name = "mtgdraft"
version = "0.1.0"
description = ""
authors = ["None"]

[tool.poetry.dependencies]
python = "~3.9"
websocket = "~0.2"
websocket-client = "~1.2"
ring = { git = "https://github.com/guldfisk/ring.git" }
mtgorp = { git = "https://github.com/guldfisk/mtgorp.git" }
magiccube = { git = "https://github.com/guldfisk/magiccube.git" }
cubeclient = { git = "https://github.com/guldfisk/cubeclient.git" }



[tool.poetry.group.dev.dependencies]
pre-commit = "^3.6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
